<?xml version="1.0"?>
<package format="2">
  <name>tic_tac_toe</name>
  <version>0.1.0</version>
  <description>The tic_tac_toe package</description>

  <maintainer email="nick@todo.todo">nick</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>bwi_moveit_utils</depend>
  <depend>bwi_perception</depend>
  <depend>segbot_arm_manipulation</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
